# nalog_consultant_bot

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements-embedders.txt  requirements-rerankers.txt  requirements.txt
agentic_rag/: README.md  __init__.py  agent.py  agentic_eval_report.json  llm_client.py  prompts.py  run_agentic_rag.py  search_tool.py
config/: sources.yaml
docker/: Dockerfile.bot  docker-compose.yml
docker/pg-init/: crawl.sql  docs.sql  fetch-log.sql
docs/: design.md  generation_evaluation.md  preprocessing_experiments.md
fetch/: format_parsers.py  init_fetch.py  models.py
fetch/handlers/: __init__.py  minfin_answers_section.py  nalog_about_nalog.py  nalog_calendar.py  nalog_docs.py  pravo_ips.py
scripts/: build_generation_eval_dataset.py  calendar_test.py  check_cuda_stack.py  compare_generation_human_vs_judge.py  evaluate_generation_judges.py  export_generation_for_human_review.py  gen_eval_dataset.py  import_human_generation_scores.py  local_corpus_loader.py  precompute_eval_queries.py  rebuild_chunking_experiments_md.py  reindex_local_corpus.py  run_all_experiments.py  run_bm25_hybrid_eval.py  run_cached_experiments.py  run_chunking_experiments.py  run_embedder_experiments.py  run_eval_matrix.py  run_generation_topk_ablation.sh  run_preprocessing_experiments.py  run_prompt_ablation_judges.sh  run_reranker_experiments.py  serve_generation_review.py  smoke_test_embedders.py  smoke_test_rerankers.py  test_context_order.py  test_text_cleaning.py
src/bot/: __init__.py  rag_service.py  (+1 more)
text/: main.tex  references.bib
(+8 files in other folders)
